Closed
Bug 1199822
Opened 10 years ago
Closed 10 years ago
Assert that self-hosting is not cyclic instead of issuing a soft error
Categories
(Core :: JavaScript: GC, defect)
Core
JavaScript: GC
Tracking
()
RESOLVED
FIXED
mozilla43
| Tracking | Status | |
|---|---|---|
| firefox43 | --- | fixed |
People
(Reporter: terrence, Assigned: terrence)
References
Details
Attachments
(1 file)
|
1.54 KB,
patch
|
till
:
review+
|
Details | Diff | Splinter Review |
While debugging bug 1194544, I noticed that self-hosted's cloning is creating nearly 0.4 MiB of hashes, and probably doing umpteen billions of extra matches, all to provide a feature that would arguably be better as a strict assertion.
Till, is this a reasonable patch? I'd think that anyone working on self hosted code should absolutely be running debug builds.
Attachment #8654385 -
Flags: review?(till)
Comment 1•10 years ago
|
||
Comment on attachment 8654385 [details] [diff] [review]
assert_no_cycles_in_selfhosting-v0.diff
Review of attachment 8654385 [details] [diff] [review]:
-----------------------------------------------------------------
It's hard to overstate how much "reasonable" is an understatement here. Thank you!
Attachment #8654385 -
Flags: review?(till) → review+
Comment 3•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in
before you can comment on or make changes to this bug.
Description
•