Bug 1199822 - Turn self-hosting's cycle-check into an assertion; r=till